@@ -2,6 +2,8 @@
 
     * Applying transparency when setting background color from 
       color table.
+      
+    * Applying transparency when setting screen mode.
 
 2003-05-07	ujwal
 
